--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
     <h1>Add file on the main branch
         
     </h1>
-    <!-- ==========second Branch =========== -->
-    <h1> This is second branch Heading </h1>
-
+  <!-- ======add second time data -->
+  <h3>add 3rd time </h3>
     <script src="app.js"></script>
 </body>
 </html>
