--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <body>
     
     <h1>Add file on the main branch
-        
+        <!-- git main file add -->
+        <h2>git Main file </h2>
     </h1>
 
     <script src="app.js"></script>
